--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" content=" Whether you're a business in need of cutting-edge software or a young mind eager to learn, Thinkers Tech invites you to be part of their mission. Together, we can build a future where technology creates opportunities, solves challenges, and changes lives. " />
   <meta name="author" content="" />
 
   <title>
-    Thinkes Tech
+    ThinkesTech.com - Home
   </title>
+  <link rel="icon" type="image/x-icon" href="images/12345.jpeg">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -30,7 +31,7 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
-
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <body>
   <div class="hero_area">
     <!-- header section strats -->
@@ -182,7 +183,7 @@
                 <div class="row">
                   <div class="col-md-6 px-0">
                     <div class="img-box">
-                      <img src="images/IT Solutions.jpg" alt="" height="480"/>
+                      <img src="images/slider-bg.jpeg" alt="" height="480"/>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -235,7 +236,7 @@
                 <div class="row">
                   <div class="col-md-6 px-0">
                     <div class="img-box">
-                      <img src="images/OnSite.jpg" alt=""height="480" />
+                      <img src="images/slider-bg.jpeg" alt=""height="480" />
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -273,7 +274,9 @@
     <!-- end slider section -->
   </div>
   <!-- end hero area -->
-  
+   <br><br><center>
+  <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="hamusonde-muntanga-4720b3334" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://zm.linkedin.com/in/hamusonde-muntanga-4720b3334?trk=profile-badge"></a></div>
+</center>
   
   <!-- service section -->
 
@@ -344,7 +347,7 @@
 
   <!-- portfolio section -->
 
-  <section class="portfolio_section">
+  <section class="portfolio_section layout_padding2-top">
     <div class="heading_container">
       <h2>
         Por<span>tf</span>olio
@@ -356,7 +359,7 @@
     <div class="portfolio_container layout_padding">
       <div class="box-1">
         <div class="img-box b-1">
-          <img src="images/p1.jpg" alt="">
+          <img src="images/try.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -380,7 +383,7 @@
       </div>
       <div class="box-2">
         <div class="img-box b-3">
-          <img src="images/p3.jpg" alt="">
+          <img src="images/hh2.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -391,7 +394,7 @@
           </div>
         </div>
         <div class="img-box b-4">
-          <img src="images/p4.jpg" alt="">
+          <img src="images/hamz.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -414,7 +417,7 @@
       <div class="heading_container">
         <h2>
          IT PR<span>ODUC</span>TS <br>
-          FOR YOUR COMPANY
+          FOR THINKER TECH 
         </h2>
         <p>
           Here is a list of some of the Productswhe sell 
@@ -546,7 +549,7 @@
         <div class="detail-box">
           <div class="heading_container">
             <h2>
-              About <span>Campany</span> Name
+              About <span>Thinkers</span> Tech
             </h2>
           </div>
           <p>
@@ -581,7 +584,7 @@
         <div class="col-lg-8 col-md-7 px-0">
           <div class="map_container">
             <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -651,16 +654,16 @@
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://web.facebook.com/profile.php?id=61551270330097">
           <img src="images/fb.png" alt="">
         </a>
-        <a href="">
+        <a href="#">
           <img src="images/twitter.png" alt="">
         </a>
-        <a href="">
+        <a href="www.linkedin.com/in/hamusonde-muntanga-4720b3334">
           <img src="images/linkedin.png" alt="">
         </a>
-        <a href="">
+        <a href="#">
           <img src="images/youtube.png" alt="">
         </a>
       </div>
@@ -698,7 +701,7 @@
               </a>
               <a href="">
                 <img src="images/call.png" alt="">
-                <span>0977478944</span>
+                <span>+260 761421577</span>
               </a>
               <a href="">
                 <img src="images/mail.png" alt="">
