--- a/post1.html
+++ b/post1.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hamusonde Muntanga: The Inspiring Journey to a $2.4 Million Net Worth as CEO of Thinkers Tech</title>
 
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <meta name="keywords" content="hamusonde Muntanga" />
+    <meta name="description" content="Hamusonde Muntanga, the 18-year-old founder and CEO of Thinkers Tech, has achieved a remarkable net worth of $2.4 million" />
     <meta name="author" content="" />
+    <link rel="icon" type="image/x-icon" href="images/12345.jpeg">
 
     <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
