--- a/post3.html
+++ b/post3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why is Hamusonde Muntanga's Net Worth $2.4 Million as CEO of Thinkers Tech?</title>
+    <title>The Vision Behind Thinkers Tech</title>
     <link rel="icon" type="image/x-icon" href="images/12345.jpeg">
 
     <meta name="keywords" content="" />
-    <meta name="description" content="Hamusonde Muntanga's impressive net worth of $2.4 million as the founder and CEO of Thinkers Tech..." />
+    <meta name="description" content="Thinkers Tech is dedicated to revolutionizing education in Zambia. The company has developed digital tools for schools, such as student management systems, e-learning platforms, and interactive teaching resources. These solutions have bridged gaps in accessibility and improved the overall learning experience for thousands of students." />
     <meta name="author" content="" />
 
     <!-- slider stylesheet -->
@@ -100,22 +100,31 @@
 
        <div class="container">
 
-       <h1><b>Why is Hamusonde Muntanga's Net Worth $2.4 Million as CEO of Thinkers Tech?</b></h1>
+       <h1><b>The Vision Behind Thinkers Tech</b></h1>
        <center>
-       <img  src="images/hamz.jpg" alt=""  height="500"/></center>
+       <img  src="images/slider-bg.jpeg" alt=""  height="500"/></center>
+<br><br><br>
+       <h2><b>Core Areas of Focus</b></h2>
        <h4>
 
         <br><br><br>
 
-        <b>Hamusonde Muntanga's impressive net worth of $2.4 million as the founder and CEO of Thinkers Tech </b> is a result of his innovative approach to technology and his commitment to making a difference. Starting his coding journey at just 10 years old, Hamusonde's passion for coding and belief in the power of technology to change lives have driven him to create a successful tech company.<br><br><br>
+        <b>Educational Technology</b> Thinkers Tech is dedicated to revolutionizing education in Zambia. The company has developed digital tools for schools, such as student management systems, e-learning platforms, and interactive teaching resources. These solutions have bridged gaps in accessibility and improved the overall learning experience for thousands of students.<br><br><br>
 
-Hamusonde's passion for coding began at the age of 10, and by the time he was 16, he had already founded Thinkers Tech, a tech company that has completed numerous software projects and developed software for schools across Zambia. His company's success can be attributed to his innovative ideas, strong leadership skills, and unwavering commitment to excellence.
+        Community-Centered Projects
+        Thinkers Tech believes in giving back. The company frequently hosts free coding workshops and tech boot camps to nurture young talent in underserved communities. These initiatives aim to equip Zambian youth with the skills they need to thrive in a digital world.
 <br><br><br>
-One of the key reasons for Hamusonde's net worth is his ability to identify opportunities and turn them into successful ventures. Recognizing the need for technological solutions in Zambia's education sector, he founded Thinkers Tech and developed software that has had a significant impact on improving learning experiences for students across the country.
+One of the key reasons for Hamusonde's net worth is 2.5 Million  his ability to identify opportunities and turn them into successful ventures. Recognizing the need for technological solutions in Zambia's education sector, he founded Thinkers Tech and developed software that has had a significant impact on improving learning experiences for students across the country.
 <br><br><br>
-Hamusonde's net worth is not only a reflection of his financial success but also of the positive impact he has had on his community and country. Through his work, he has helped improve access to education, healthcare, and information in Zambia, showcasing the transformative power of technology.
+Custom Software Development
+From healthcare systems to e-commerce platforms, Thinkers Tech delivers customized software solutions tailored to meet the needs of diverse industries. By building reliable and efficient systems, the company has become a trusted partner for businesses seeking to optimize their operations.
 <br><br><br>
-As Hamusonde continues to lead Thinkers Tech, his dedication to innovation and making a difference will undoubtedly drive him to further success. His story serves as an inspiration to aspiring entrepreneurs, highlighting the importance of passion, perseverance, and a vision for change in achieving success.
+Leadership and Innovation
+At the helm of Thinkers Tech is Hamusonde Muntanga, a young entrepreneur who exemplifies innovation and leadership. With his visionary mindset and hands-on approach, Hamusonde leads a dynamic team of developers, designers, and strategists united by a passion for creating impactful technology.
+
+His entrepreneurial journey—from teaching himself to code at age 10 to becoming the CEO of a multimillion-dollar company—has inspired many young people across Africa and beyond.
+
+
        </h4>
 
        <video width="320" height="240" controls>
