--- a/service.html
+++ b/service.html
@@ -8,13 +8,14 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="keywords" content="Thinkerstech, thhinkers tech, thinkertech" />
+  <meta name="description" content="Whether you're a business in need of cutting-edge software or a young mind eager to learn, Thinkers Tech invites you to be part of their mission. Together, we can build a future where technology creates opportunities, solves challenges, and changes lives." />
   <meta name="author" content="" />
 
   <title>
-    Tinkers Tech
+    TinkersTech - Services
   </title>
+  <link rel="icon" type="image/x-icon" href="images/12345.jpeg">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -49,7 +50,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">
@@ -58,7 +59,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="service.html">
-                    Services
+                    Services<span class="sr-only">(current)</span>
                   </a>
                 </li>
                 <li class="nav-item">
@@ -100,11 +101,137 @@
 
   <!-- service section -->
 
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        header {
+            background-color: #007acc;
+            color: #fff;
+            text-align: center;
+            padding: 1.5rem 0;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        main {
+            padding: 2rem;
+        }
+
+        section {
+            margin-bottom: 2rem;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 1.5rem;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            color: #007acc;
+            margin-top: 0;
+        }
+
+        section p {
+            margin: 0.5rem 0 0;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem 0;
+            background-color: #007acc;
+            color: #fff;
+        }
+    </style>
+
+<body>
+    <header>
+        <h1>Thinkers Tech Services</h1>
+        <p>Your trusted partner for innovative tech solutions</p>
+    </header>
+    <main>
+        <section>
+            <h2>Web Development and Design</h2>
+            <p>Create stunning and functional websites tailored to your needs, including e-commerce solutions, UI/UX design, and SEO optimization.</p>
+        </section>
+        <section>
+            <h2>Software Development</h2>
+            <p>Develop custom software and mobile apps, ERP systems, and CRMs to enhance your business efficiency.</p>
+        </section>
+        <section>
+            <h2>Automation Solutions</h2>
+            <p>Streamline your operations with workflow automation, chatbots, and robotic process automation (RPA).</p>
+        </section>
+        <section>
+            <h2>Artificial Intelligence and Machine Learning</h2>
+            <p>Leverage AI for predictive modeling, data analysis, and custom solutions like NLP and virtual assistants.</p>
+        </section>
+        <section>
+            <h2>Graphic Design and Branding</h2>
+            <p>Build your brand identity with logo design, social media graphics, and professional marketing materials.</p>
+        </section>
+        <section>
+            <h2>Digital Marketing</h2>
+            <p>Grow your online presence through social media management, SEO, PPC, and email campaigns.</p>
+        </section>
+        <section>
+            <h2>IT Infrastructure and Support</h2>
+            <p>Ensure smooth IT operations with network setup, cybersecurity, cloud computing, and managed services.</p>
+        </section>
+        <section>
+            <h2>Data Science and Analytics</h2>
+            <p>Make data-driven decisions with analytics tools, dashboards, and data visualization services.</p>
+        </section>
+        <section>
+            <h2>E-commerce Solutions</h2>
+            <p>Set up and manage online stores, integrate payment gateways, and streamline inventory management.</p>
+        </section>
+        <section>
+            <h2>Training and Consultation</h2>
+            <p>Empower your team with tech training workshops, digital transformation strategies, and IT consultations.</p>
+        </section>
+        <section>
+            <h2>Internet of Things (IoT) Solutions</h2>
+            <p>Implement smart device integrations and IoT systems for home, office, and industrial applications.</p>
+        </section>
+        <section>
+            <h2>Augmented Reality (AR) and Virtual Reality (VR)</h2>
+            <p>Create immersive AR/VR applications for gaming, training, real estate, and tourism.</p>
+        </section>
+        <section>
+            <h2>Blockchain and Cryptocurrency</h2>
+            <p>Develop blockchain solutions, smart contracts, and cryptocurrency payment systems for modern businesses.</p>
+        </section>
+        <section>
+            <h2>Video Editing and Animation</h2>
+            <p>Produce high-quality corporate videos, animations, and explainer content to engage your audience.</p>
+        </section>
+        <section>
+            <h2>Cloud Services</h2>
+            <p>Migrate to the cloud and access secure storage, SaaS solutions, and cloud application development.</p>
+        </section>
+        <section>
+            <h2>Hardware Integration and Support</h2>
+            <p>Set up and maintain POS systems, IoT devices, and tech equipment to support your business operations.</p>
+        </section>
+    </main>
+
+
+
+
   <section class="service_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          Ser<span>vi</span>ces
+          More Ser<span>vi</span>ces
         </h2>
         <p>
           The following are some of the services we provde
@@ -330,6 +457,7 @@
         </p>
       </div>
     </section>
+  
   <!-- end info section -->
 
 
