--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" content=" Whether you're a business in need of cutting-edge software or a young mind eager to learn, Thinkers Tech invites you to be part of their mission. Together, we can build a future where technology creates opportunities, solves challenges, and changes lives. " />
   <meta name="author" content="" />
 
   <title>
-    Thinkes Tech
+    ThinkesTech Photos
   </title>
 
   <!-- slider stylesheet -->
@@ -49,7 +49,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">
@@ -63,7 +63,7 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html">
-                    Portfolio
+                    Portfolio <span class="sr-only">(current)</span>
                   </a>
                 </li>
                 <li class="nav-item">
@@ -113,7 +113,7 @@
     <div class="portfolio_container layout_padding">
       <div class="box-1">
         <div class="img-box b-1">
-          <img src="images/p1.jpg" alt="">
+          <img src="images/try.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -137,7 +137,7 @@
       </div>
       <div class="box-2">
         <div class="img-box b-3">
-          <img src="images/p3.jpg" alt="">
+          <img src="images/hh2.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
@@ -148,7 +148,7 @@
           </div>
         </div>
         <div class="img-box b-4">
-          <img src="images/p4.jpg" alt="">
+          <img src="images/hamz.jpg" alt="">
           <div class="btn-box">
             <a href="" class="btn-1">
 
